Added: - Data Providers folder - Router configuration - Login and SignUp Components - Home Components - Configure styles - Importing folders standard - Other configurations

--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,11 @@
             "styles": [
               "src/main.sass"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/themes"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
