--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "chatting-fe",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "engines": {
+    "node": ">=12.16.2",
+    "npm": ">=6.14.4"
+  },
   "scripts": {
     "ng": "ng",
     "start": "npm run env -s && ng serve --proxy-config proxy.conf.js",
@@ -25,6 +29,7 @@
     "https-proxy-agent": "^5.0.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
+    "ngx-cookie-service": "^3.0.4",
     "rxjs": "~6.5.4",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
@@ -35,19 +40,18 @@
     "@angular/cli": "~9.1.1",
     "@angular/compiler-cli": "~9.1.1",
     "@angular/language-service": "~9.1.1",
-    "@types/node": "^12.11.1",
+    "@types/node": "^13.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "karma": "^5.0.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
-    "ts-node": "~8.3.0",
+    "ts-node": "~8.8.2",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
   }
