--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
     "@angular/forms": "~9.1.1",
+    "@angular/localize": "^9.1.13",
     "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
@@ -44,13 +45,13 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^13.11.1",
     "codelyzer": "^5.2.2",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^5.0.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine-html-reporter": "^1.6.0",
     "ts-node": "~8.8.2",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
